welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value compt
      compt = compt + 1
      ^island:7: error: not found: value compt
        compt = compt + 1
        ^island:9: error: not found: value compt
          compt = compt + 1
          ^island:11: error: not found: value compt
            compt=compt+1
            ^island:18: error: not found: value compt
  return compt
         ^